--- a/helm/hazelcast/values.yaml
+++ b/helm/hazelcast/values.yaml
@@ -301,8 +301,7 @@ jet:
 
 # Hazelcast Management Center application properties
 mancenter:
-  security:
-    enabled: false
+
   # enabled is a flag to enable Management Center application
   enabled: true
   ## Hazelcast Management Center image version
@@ -329,7 +328,7 @@ mancenter:
   # Dev mode is for the Hazelcast clusters running on your local for development
   # or evaluation purposes and it provides quick access to the Management Center without requiring any security credentials
   devMode:
-    enabled: false
+    enabled: true
 
   # ingress configuration for mancenter
   ingress:
