--- a/helm/ollama/values.yaml
+++ b/helm/ollama/values.yaml
@@ -74,18 +74,16 @@ ollama:
           #        3g.40gb: 1
 
   models:
-    # -- List of models to pull at container startup
-    # The more you add, the longer the container will take to start if models are not present
-    # pull:
-    #  - llama2
     #  - mistral
-    pull: []
+    pull:
+      - llama3
 
     # -- List of models to load in memory at container startup
     # run:
     #  - llama2
     #  - mistral
-    run: []
+    run: 
+      - llama3
 
   # -- Add insecure flag for pulling at container startup
   insecure: false
