--- a/helm/ollama/values.yaml
+++ b/helm/ollama/values.yaml
@@ -78,13 +78,13 @@ ollama:
     # The more you add, the longer the container will take to start if models are not present
     pull:
       - llama2
-      - mistral
+      #- mistral
     # pull: []
 
     # -- List of models to load in memory at container startup
     run:
       - llama2
-      - mistral
+      #- mistral
     # run: []
 
   # -- Add insecure flag for pulling at container startup
