--- a/helm/ollama/templates/ingressRoute.yaml
+++ b/helm/ollama/templates/ingressRoute.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: {{ .Values.appName }}
+  name: ollama-ingress
   annotations: 
     kubernetes.io/ingress.class: traefik-external 
 spec:
