--- a/helm/ollama/values.yaml
+++ b/helm/ollama/values.yaml
@@ -76,16 +76,16 @@ ollama:
   models:
     # -- List of models to pull at container startup
     # The more you add, the longer the container will take to start if models are not present
-    pull:
-      - llama2
+    # pull:
+    #   - llama2
       #- mistral
-    # pull: []
+    pull: []
 
     # -- List of models to load in memory at container startup
-    run:
-      - llama2
+    # run:
+    #   - llama2
       #- mistral
-    # run: []
+    run: []
 
   # -- Add insecure flag for pulling at container startup
   insecure: false
