--- a/helm/ollama/templates/ingressRoute.yaml
+++ b/helm/ollama/templates/ingressRoute.yaml
@@ -9,3 +9,15 @@ spec:
     - websecure
   routes:  
     {{- toYaml .Values.traefik.ingress.routes | nindent 20 }} 
+
+
+
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: ollama-strip-prefix
+  namespace: ollama
+spec:
+  stripPrefix:
+    prefixes:
+      - "/ollama"
