--- a/helm/ollama/values.yaml
+++ b/helm/ollama/values.yaml
@@ -184,18 +184,18 @@ resources:
   # -- Pod requests
   requests: {}
     # Memory request
-    # memory: 4096Mi
+    memory: 4096Mi
 
     # CPU request
-    # cpu: 2000m
+    cpu: 10Gi
 
   # -- Pod limit
   limits: {}
     # Memory limit
-    # memory: 8192Mi
+    memory: 8192Mi
 
     # CPU limit
-    # cpu: 4000m
+    cpu: 10Gi
 
 # Configure extra options for liveness probe
 # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
