--- a/helm/ollama/values.yaml
+++ b/helm/ollama/values.yaml
@@ -187,7 +187,7 @@ resources:
     memory: 8192Mi
 
     # CPU request
-    cpu: 14Gi
+    cpu: 10000m
 
   # -- Pod limit
   limits: {}
@@ -195,7 +195,7 @@ resources:
     memory: 16384Mi
 
     # CPU limit
-    cpu: 28Gi
+    cpu: 20000m
 
 # Configure extra options for liveness probe
 # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes
